[gd_scene load_steps=15 format=2]

[ext_resource path="res://spells/TeleportSpell.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/weapon/hammer-pa.png" type="Texture" id=2]
[ext_resource path="res://entities/constructs/PlatformConstruct/CreatePlatformConstruct.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/weapon/HammerSpellcaster.gd" type="Script" id=4]
[ext_resource path="res://entities/weapon/Hammer.gd" type="Script" id=5]
[ext_resource path="res://entities/constructs/StoneblockConstruct/CreateStoneblockConstruct.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/constructs/DecoyConstruct/CreateDecoyConstruct.tscn" type="PackedScene" id=7]
[ext_resource path="res://systems/sound/SoundPool.gd" type="Script" id=8]
[ext_resource path="res://sounds/fx/swoosh1.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/fx/impact1.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/fx/teleport1.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 10.5 )

[sub_resource type="Animation" id=3]
resource_name = "throw"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( 20, 0 ), Vector2( 30, 0 ), Vector2( 40, 0 ), Vector2( 50, 0 ), Vector2( 60, 0 ), Vector2( 70, 0 ), Vector2( 80, 0 ), Vector2( 90, 0 ), Vector2( 100, 0 ) ]
}

[node name="Hammer" type="KinematicBody2D"]
position = Vector2( 3, 0 )
collision_layer = 4
collision_mask = 49
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HeadCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="HandleCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.5 )
shape = SubResource( 2 )

[node name="ThrowTimer" type="Timer" parent="."]

[node name="ThrowAnimation" type="AnimationPlayer" parent="."]
anims/throw = SubResource( 3 )

[node name="ThrowTween" type="Tween" parent="."]

[node name="ReturnTween" type="Tween" parent="."]

[node name="MeleeChargeDelay" type="Timer" parent="."]

[node name="HammerSpellcaster" type="Node" parent="."]
script = ExtResource( 4 )
recharge_amount = 1.0
recharge_rate = 0.1
active_spell = NodePath("TeleportSpell")

[node name="TeleportSpell" parent="HammerSpellcaster" instance=ExtResource( 1 )]

[node name="CreatePlatformConstruct" parent="HammerSpellcaster" instance=ExtResource( 3 )]

[node name="CreateStoneblockConstruct" parent="HammerSpellcaster" instance=ExtResource( 6 )]

[node name="CreateDecoyConstruct" parent="HammerSpellcaster" instance=ExtResource( 7 )]

[node name="Sounds" type="Node2D" parent="."]

[node name="HammerCatch" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
bus = "SFX"

[node name="HammerSpin" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = 16.0
bus = "SFX"
script = ExtResource( 8 )
delay = 0.125
pool_size = 6

[node name="HammerTeleport" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -5.0
bus = "SFX"
script = ExtResource( 8 )
pool_size = 4
